# zeos-orchard

./: 404.html  Cargo.toml  Makefile  README.md  application.html  concepts.html  design.html  index.html  index_st.html  introduction.html  print.html  protocol.html  searchindex.js  searchindex.json  test.js  user.html  worker.js
.github/workflows/: bench.yml  book.yml  ci.yml
application/: contract.html  library.html  proxy.html  ui.html  validator.html
benches/: circuit.rs  note_decryption.rs  small.rs
book/: book.toml  mdmath.macros.json
book/src/: SUMMARY.md  application.md  introduction.md  protocol.md
book/src/application/: contract.md  library.md  proxy.md  validator.md
book/src/introduction/: preliminaries.md
concepts/: preliminaries.html
design/: actions.html  circuit.html  commitment-tree.html  commitments.html  keys.html  nullifiers.html  signatures.html
design/circuit/: commit-ivk.html  gadgets.html  note-commit.html
dev/bench/: data.js
html/: index.html  print.html  searchindex.js  searchindex.json
html/concepts/: preliminaries.html
html/protocol/: circuit.html  commitment-tree.html  commitments.html  nullifiers.html
introduction/: preliminaries.html
protocol/: actions.html  circuit.html  commitment-tree.html  commitments.html  datasets.html  in-band.html  keys.html  notes.html  nullifiers.html  private-deposits-withdrawals.html  proof-bundling.html  zactions.html
protocol/circuit/: commit-ivk.html  gadgets.html  modifications.html  note-commit.html  zcash-circuit.html  zeos-circuit.html
protocol/proof-bundling/: begin.html  exec.html  step.html
protocol/zactions/: burnat.html  burnft.html  burnft2.html  burnnft.html  mintat.html  mintft.html  mintnft.html  transferft.html  transfernft.html
src/: action.rs  address.rs  builder.rs  bundle.rs  circuit.rs  constants.rs  contract.rs  eosio.rs  keys.rs  lib.rs  note.rs  note_encryption.rs  spec.rs  tree.rs  value.rs  wallet.rs
src/bundle/: batch.rs
src/circuit/: gadget.rs  note_commit.rs
src/note/: commitment.rs  nullifier.rs
src/primitives/: redpallas.rs
src/test_vectors/: keys.rs
tests/: builder.rs
user/: creating-notes.html  integration.html  keys.html  spending-notes.html
(+28 files in other folders)
