[package]
name = "zeos-orchard"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
    "Daira Hopwood <daira@jacaranda.org>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Kris Nuttycombe <kris@electriccoin.co>",
    "Matthias Schönebeck <matthias.schoenebeck@gmail.com",
]
edition = "2021"
rust-version = "1.56.1"
description = "The ZEOS-Orchard for private transactions on the EOS blockchain"
license-file = "LICENSE-BOSL"
repository = "https://github.com/mschoenebeck/zeos-orchard"
documentation = "https://mschoenebeck.github.io/zeos-orchard"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
keywords = ["zeos"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[dependencies]
rustzeos = { version = "0.1.0", path = "../rustzeos", features = ["multicore"] }
aes = "0.7"
bitvec = "1"
blake2b_simd = "1"
ff = "0.12"
fpe = "0.5"
group = "0.12"
halo2_gadgets = { version = "0.2", path = "../halo2/halo2_gadgets" }
halo2_proofs = { version = "0.2", path = "../halo2/halo2_proofs" }
hex = "0.4"
lazy_static = "1"
memuse = { version = "0.2", features = ["nonempty"] }
pasta_curves = { version = "0.4", path = "../pasta_curves" }
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
reddsa = { version = "0.3", path = "../reddsa" }
nonempty = "0.7"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.3"
incrementalmerkletree = "0.3"
chacha20poly1305 = "0.9"
rand_core = "0.6"

# Logging
tracing = "0.1"

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = "0.3"
halo2_gadgets = { version = "0.2", features = ["test-dependencies"], path = "../halo2/halo2_gadgets" }
hex = "0.4"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.9", features = ["criterion", "flamegraph"] } # MSRV 1.56

[lib]
bench = false

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
test-dependencies = ["proptest"]

[profile.release]
debug = true
